# seira-craft

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: checks.yml  publish.yml
examples/: main.py
seira_craft/: __init__.py  crafter.py  default.py  seira.py  siera.py
test/: test_crafter.py  test_sanity.py
