[tool.poetry]
name = "seira-craft"
version = "0.0.1"
description = ""
authors = ["jesper <mail@jeshj.com>"]
readme = "README.md"
packages = [{include = "seira_craft"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = {version = "^23.7.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
