[tool.poetry]
name = "seira-craft"
version = "0.0.1"
description = "A python package to help craft and manipulate sequences."
authors = ["Jesper Halkjær Jensen <mail@jeshj.com>"]
readme = "README.md"
repository = "https://github.com/gedemagt/seira-craft"
packages = [{include = "seira_craft"}]
license = "MIT"
keywords = ["sequence", "interval"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.284"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
